Changes
=======

2011-07-30
----------

- Update to jpegsrc v8c and set `-arch x86_64` for Lion.
  [hannosch]

- Update to virtualenv 1.6.4.
  [hannosch]

- Updated readline to 6.2.
  [hannosch]

- Changed `MACOSX_DEPLOYMENT_TARGET` to `10.7` for Python 2.4 on Lion.
  [hannosch]

2011-07-25
----------

- Add OSX Lion support to the buildout.
  [dsa]

2011-06-15
----------

- Updated pypy to 1.5 (only 64 bit version, there is no release for 32 bit).
  [fschulze]

- Added pdbtextmate support for Python 3.2.
  [fschulze]

- Removed Python 3.1.x it doesn't work properly anymore and isn't used much
  and not supported anymore.
  [fschulze]

- Update to Python 2.7.2.
  [fschulze]

- Update to Python 2.6.7 final.
  [fschulze]

2011-05-28
----------

- Update to Python 2.5.6 final.
  [hannosch]

2011-05-23
----------

- Update to Python 2.6.7rc2 to include more security fixes.
  [hannosch]

2011-05-18
----------

- New PyPy version 1.4.1.
  [fschulze]

2011-05-08
----------

- Update to Python 2.5.6c1 and 2.6.7rc1 to include security fixes.
  [hannosch]

2011-04-07
----------

* Add patch to fix recursion error crash on python2.6 OS X from
  http://bugs.python.org/issue9670 (edited to apply with patch -p0).
  [elro]

2009-11-26
----------

* Renamed part for readline patches, so the old ones from 5.2 don't interfere.
  [fschulze]

2009-11-25
----------

* Added ugly hack which hopefully solves the build order issues causing
  Python 2.4 to be build before readline was built.
  [fschulze]

* Ugraded to readline 6.0, 5.2 had compile issues on OS X.
  [fschulze]

2009-11-05
----------

* Use virtualenv 1.4rc1 with the --distribute option.
  [fschulze]

* Autodetect 32/64 bit in Snow Leopard.
  [fschulze]

2009-11-03
----------

* Upgraded virtualenv-distribute to latest version to get distribute 0.6.6.
  [reinout]


2009-10-28
----------

* Added configuration to build Python with debug symbols for C level