@@ -10,7 +10,7 @@ find-links =
 versions = versions
 
 [versions]
-monkeycmmi = 0.1
+monkeycmmi = 0.2
 
 [opt]
 recipe = plone.recipe.command
