@@ -1,7 +1,6 @@
 from setuptools import setup, find_packages
-import sys, os
 
-version = '0.1'
+version = '0.2'
 
 setup(name='monkeycmmi',
       version=version,
@@ -17,7 +16,7 @@ setup(name='monkeycmmi',
       include_package_data=True,
       zip_safe=False,
       install_requires=[
-        'zc.recipe.cmmi==1.3.1',
+        'zc.recipe.cmmi==1.3.5',
       ],
       entry_points = {'zc.buildout':
                       ['default = monkeycmmi:Recipe']},
